hphp/test/zend7/Zend/tests/return_types/030.php.expectf
ok
ok

Fatal error: %s
Stack trace:
#0 %s030.php(10): foo(0)
#1 {main}
  thrown in %s030.php on line 3